# Taller2EDD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Clases/: Cancion.cpp  Cancion.hpp  EntradaArtista.hpp
Core/: Reproductor.cpp  Reproductor.hpp
Structure/: Avl.hpp  Heap.hpp  Nodo.hpp  SongList.hpp  Trie.hpp
